# hardcaml_arty

./: .gitignore  LICENSE  Makefile  README.md  hardcaml_arty.opam  place.tcl  route.tcl  synth.tcl
etc/ips/: hardcaml_arty_tri_mode_ethernet_mac.xci
examples/: .gitignore
examples/blinker/: Makefile  README.md  blinker.ml  dune  place.tcl  synth.tcl
examples/blinker/ips/design_1_clk_wiz_0_0/: design_1_clk_wiz_0_0.xci
examples/blinker/ips/hardcaml_arty_tri_mode_ethernet_mac_0/: hardcaml_arty_tri_mode_ethernet_mac_0.xci
ips/design_1_clk_wiz_0_0/: design_1_clk_wiz_0_0.xci
src/designs/: blinker.ml
src/infrastructure/: axi_stream8.ml  axi_stream8.mli  clocking_wizard.ml  clocking_wizard.mli  dune  mdio.ml  mdio.mli  mii.ml  mii.mli  rtl_generator.ml  rtl_generator.mli  tri_mode_ethernet_mac.ml  tri_mode_ethernet_mac.mli  uart.ml  uart.mli  user_application.ml  user_application.mli  utilities.ml  utilities.mli
test/infrastructure/: dune  test_uart_state_machine.ml  test_utilities_counter.ml
